gateway-k8s/gateway-mariadb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-mariadb
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-mariadb
  template:
    metadata:
      labels:
        app: gateway-mariadb
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gateway-mariadb-pvc
      containers:
        - name: mariadb
          image: mariadb:10.8.3
          args:
            - --lower_case_table_names=1
            - --skip-ssl
            - --character_set_server=utf8mb4
            - --explicit_defaults_for_timestamp
          #        command:
          #        - mysqld
          #        - --lower_case_table_names=1
          #        - --skip-ssl
          #        - --character_set_server=utf8mb4
          #        - --explicit_defaults_for_timestamp
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql/
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-mariadb
  namespace: default
spec:
  selector:
    app: gateway-mariadb
  ports:
    - port: 3306
