gateway-k8s/gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: default
  labels:
    app: gateway
spec:
  selector:
    app: gateway
  type: LoadBalancer
  ports:
    - name: http
      port: 8000
